crates/wac-parser/tests/resolution/fail/windows-file.wac
package foo:bar;

import x: func();
import x: func();
